[package]
name = "whoyougonnacall"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
hyper = "1.4"
tokio = { version= "1.40", features = ["full"] }
serde = { version ="1.0" , features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
pin-project = "1.1"
snafu = "0.8"
futures = "0.3"
tracing = "0.1.40"
url = "2.5"
chrono = "0.4.38"
tracing-subscriber = "0.3.18"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.73.0" }
strum_macros = "0.26.4"
urlencoding = "2.1"